<resources>
    <string name="app_name">TaskTimer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="task_selected">No Task Selected</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menumain_AddTask">Add Task</string>
    <string name="menumain_durations_report">Durations Report</string>
    <string name="menumain_abouttask_timer">AboutTask Timer</string>
    <string name="menumain_generatedata">GenerateData</string>
    <string name="edit_button_description">button to edit a tqasks details</string>
    <string name="delete_button_description">Button to deletea task</string>
    <string name="edit_button__task">edit button of Task</string>
    <string name="added_eddit_description_hint">Task description (option)</string>
    <string name="added_sorthed_hint">Order: sorts low to high</string>
    <string name="add_edit_hint">Task name: required</string>
    <string name="add_edit_save_task">Save Task</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_task_message">no task</string>
    <string name="instructions_heading">Instructions</string>
    <string name="instructions_settings">Use the add button (+) in the toolbar above to create new tasks.

Tasks with lower sort orders will be placed higher up the list.Tasks with the same sort order will be sorted alphabetically.

Tapping a task will start the timer for that task (and will stop the timer for any previous task that was being timed).

Each task has Edit and Delete buttons if you want to change the details or remove the task.</string>
</resources>
