<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bzahov.tasktimer.activities.MainActivity">
    <item
        android:id="@+id/menumain_addTask"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="10"
        android:title="@string/menumain_AddTask"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menumain_showDurations"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="20"
        android:title="@string/menumain_durations_report"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menumain_settings"
        android:orderInCategory="30"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menumain_showApout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="40"
        android:title="@string/menumain_abouttask_timer"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menumain_generateData"
        android:orderInCategory="50"
        android:title="@string/menumain_generatedata"
        android:visible="false"
        app:showAsAction="never" />
</menu>
