<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/taskListItems"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tillName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/tillEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="TaskTimer Application"/>

    <TextView
        android:id="@+id/tillDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/edit_button_description"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintEnd_toStartOf="@+id/tillEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tillName"
        tools:text="Write cource notes and video for the task timer" />

    <ImageView
        android:id="@+id/tillEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/tillDelete"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/cardview_dark_background"
        app:srcCompat="@android:drawable/ic_menu_edit"
        android:contentDescription="@string/edit_button__task" />

    <ImageView
        android:id="@+id/tillDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/delete_button_description"
        app:layout_constraintBottom_toBottomOf="@+id/tillEdit"
        android:background="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_delete" />
</androidx.constraintlayout.widget.ConstraintLayout>